# DataManager

./: .gitignore
database/: database.db
datamanager/: CMakeLists.txt  main.cpp
datamanager/database/: database.cpp  database.h
datamanager/database/structs/: abstract.h  data.h  datas.h  login.h  logins.h  mail.h  mails.h  password.h  passwords.h  secret.h  secrets.h  telephone.h  telephones.h  twofactor.h  twofactors.h
datamanager/models/: datamodel.cpp  datamodel.h
datamanager/structs/: data.h  login.h  mail.h  password.h  secret.h  telephone.h  twofactor.h
datamanager/widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui
